link entre as páginas

--- a/marcio-xerem/style.css
+++ b/marcio-xerem/style.css
@@ -18,10 +18,14 @@ main {
     padding:10px;
 }
 
-.produto img {
+.produto > a > img {
     width: 100%;
     height: 200px;
     border-radius: 15px;
+}
+
+.produto a {
+    width: 100%;
 }
 
 .produto {
