--- a/marcio-xerem/style.css
+++ b/marcio-xerem/style.css
@@ -16,16 +16,22 @@ main {
 
 .card-produto {
     padding:10px;
+    height: 100%;
 }
 
-.produto img {
+.produto > a > img {
     width: 100%;
     height: 200px;
     border-radius: 15px;
 }
 
+.produto a {
+    width: 100%;
+    flex-grow: 1;
+}
+
 .produto {
-    padding: 10px 20px;
+    padding: 10px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,6 +46,7 @@ main {
     padding: 10px 20px;
     border-radius: 30px;
     border: 1px solid rgb(186, 184, 184);
+    background-color: #f3d8bf;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -231,27 +238,128 @@ main {
     overflow: hidden;
 }
 
-.catalogoProduto .btn-addCart {
-    width: 10%;
-    position: absolute;
-    bottom: 0;
-    border: 0;
-    padding: 10px 20px;
-    border-radius: 10px;
-    border: 1px solid rgb(186, 184, 184);
+.catalogoProduto {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    height: 45px;
-    background-color: #cc4d1f;
+}
+
+.detalheProduto {
+    text-align: center;
+}
+
+.detalheProduto img {
+    border-radius: 30px;
+}
+
+.detalheProduto > img {
+    width: 90%;
+    margin-bottom: 40px;
+    height: 600px;
+}
+
+.infos-produto {
+    padding: 40px;
+}
+
+.infos-produto > h4 {
+    color: #a8a8a8;
+}
+
+.infos-produto > h1 {
+    font-size: 60px;
+    margin-bottom: 50px;
+}
+
+.infos-produto > p {
+    font-size: 24px;
+    color: #a19c9c;
+}
+
+.infos-produto > span {
     font-weight: bold;
+    font-size: 32px;
+}
+
+.minImg {
+    padding: 10px;
 }
 
 .detalheProduto .minImg img{ 
 
-width: 100%; 
+width: 80%; 
 
+}
 
+.cart-manager {
+    margin-top: 50px;
+    display: flex;
+    gap: 60px;
+}
 
+.controlador {
+    width: 30%;
+    padding: 20px 25px;
+    background-color: #f1f1f1;
+    border-radius: 15px;
+    user-select: none;
+}
 
+.controlador > div, .controlador > span {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.controlador img {
+    width: 15px;
+}
+
+.controlador > div {
+    cursor: pointer;
+}
+
+.addCart-individual {
+    background-color: #ee7010;
+    width: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
+    gap: 20px;
+}
+
+.addCart-individual span {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.addCart-individual img {
+    
+    filter: brightness(0);
+
+}
+
+.pagina-inicial {
+    margin-bottom: 20px;
+}
+
+.pagina-inicial > a {
+    text-decoration: none;
+    color: #000;
+}
+
+.pagina-inicial > a > img {
+    width: 20px;
+}
+
+.desabilitado {
+    opacity: 0.4;
+}
+
+.habilitado {
+    opacity: 1;
 }
